--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/boat.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">BadgerBOAT</a></h3>
+	    					<h3><a href="./BadgerBoatReport.pdf">BadgerBOAT</a></h3>
 	    					<span>An Autonomous Boat using ROS and MOOS</span>
 	    				</div>
     				</div>
