--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html"><span style="margin-right:10px;">P</span>   eter Sauer</a>
+	      <a class="navbar-brand" href="index.html"><span style="margin-right:10px;">Peter Sauer</span>    </a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -146,6 +146,7 @@
 					</div>
 				</div>
 			</div>
+			
 		</div>
 	</section>
 
