--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/tee.jpeg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">RoboTee</a></h3>
+							<h3><a href="https://www.youtube.com/watch?v=su847c34yGw&feature=youtu.be">RoboTee</a></h3>
 							<span>A dynamically adjustable robotic baseball tee</span>
 						</div>
 					</div>
