Added some content

--- a/index.html
+++ b/index.html
@@ -146,6 +146,36 @@
 					</div>
 				</div>
 			</div>
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/cyclone.jpg);">
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3><a href="http://projectcyclone.com/">Project Cyclone</a></h3>
+							<span>Using AI to do preventative machine maintenance</span>
+						</div>
+					</div>
+				</div>
+<!--				<div class="col-md-4">-->
+<!--					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/tee.jpeg);">-->
+<!--						<div class="overlay"></div>-->
+<!--						<div class="text text-center p-4">-->
+<!--							<h3><a href="https://www.youtube.com/watch?v=su847c34yGw&feature=youtu.be">steri</a></h3>-->
+<!--							<span>A mail sterilization device for COVID-19 using UV-C</span>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
+
+<!--				<div class="col-md-4">-->
+<!--					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/robot.png);">-->
+<!--						<div class="overlay"></div>-->
+<!--						<div class="text text-center p-4">-->
+<!--							<h3><a href="https://www.youtube.com/channel/UCIJYmga_sx5PnGkA-OP09_Q">Mask Cleaner</a></h3>-->
+<!--							<span>A mask sterilization device for COVID-19 using UV-C</span>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
+			</div>
 
 		</div>
 	</section>
@@ -188,6 +218,17 @@
 					<div class="col-md-9">
 					  <div id="page-1" class= "page one">
 					  	<h2 class="heading">Education</h2>
+						  <div class="resume-wrap d-flex ftco-animate">
+						  <div class="icon d-flex align-items-center justify-content-center">
+							  <span class="flaticon-ideas"></span>
+						  </div>
+						  <div class="text pl-3">
+							  <span class="date">2020-Current</span>
+							  <h2>Master of Science in Robotics</h2>
+							  <span class="position">Northwestern University</span>
+							  <p>Currently working on a masters degree in robotics at Northwestern University</p>
+						  </div>
+					  </div>
 					    <div class="resume-wrap d-flex ftco-animate">
 					    	<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
@@ -225,6 +266,17 @@
 
 					  <div id="page-2" class= "page two">
 					  	<h2 class="heading">Work Experience</h2>
+						  <div class="resume-wrap d-flex ftco-animate">
+						  <div class="icon d-flex align-items-center justify-content-center">
+							  <span class="flaticon-ideas"></span>
+						  </div>
+						  <div class="text pl-3">
+							  <span class="date">May 2020 - Current</span>
+							  <h2>Mechanical Engineer</h2>
+							  <span class="position">Presco Inc. (Woodbridge, CT)</span>
+							  <p>Designed hardware, software and firmware for a device that uses UV-C lights to clean mail. Mail could be fed into the device and processed using stepper motors and rollers as it travels under disinfecting UV-C bulbs. </p>
+						  </div>
+					  </div>
 					    <div class="resume-wrap d-flex ftco-animate">
 					    	<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
@@ -529,7 +581,7 @@
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="https://github.com/petercsauer"><span class="icon-github"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.facebook.com/petercsauer"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="https://www.instagram.com/sauerpatchk/"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.linkedin.com/in/petercsauer/"><span class="icon-linkedin"></span></a></li>
               </ul>
             </div>
           </div>
