--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 					<h2 class="heading">Education</h2>
 					<div class="resume-wrap d-flex ftco-animate">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<i class="fas fa-graduation-cap"></i>
+							<i class="fas fa-graduation-cap" style="color:white"></i>
 						</div>
 						<div class="text pl-3">
 							<span class="date">2020-Current</span>
@@ -234,7 +234,7 @@
 					</div>
 					<div class="resume-wrap d-flex ftco-animate">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<i class="fas fa-graduation-cap"></i>
+							<i class="fas fa-graduation-cap" style="color:white"></i>
 						</div>
 						<div class="text pl-3">
 							<span class="date">2016-2020</span>
@@ -245,7 +245,7 @@
 					</div>
 					<div class="resume-wrap d-flex ftco-animate">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<i class="fas fa-graduation-cap"></i>
+							<i class="fas fa-graduation-cap" style="color:white"></i>
 						</div>
 						<div class="text pl-3">
 							<span class="date">2016-2020</span>
@@ -256,7 +256,7 @@
 					</div>
 					<div class="resume-wrap d-flex ftco-animate">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<i class="fas fa-graduation-cap"></i>
+							<i class="fas fa-graduation-cap" style="color:white"></i>
 						</div>
 						<div class="text pl-3">
 							<span class="date">2012-2016</span>
@@ -271,7 +271,7 @@
 					<h2 class="heading">Work Experience</h2>
 					<div class="resume-wrap d-flex ftco-animate">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<i class="fas fa-code"></i>
+							<i class="fas fa-code" style="color:white"></i>
 						</div>
 						<div class="text pl-3">
 							<span class="date">May 2020 - Current</span>
@@ -282,7 +282,7 @@
 					</div>
 					<div class="resume-wrap d-flex ftco-animate">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<i class="fas fa-cogs"></i>
+							<i class="fas fa-cogs" style="color:white"></i>
 						</div>
 						<div class="text pl-3">
 							<span class="date">May 2020 - Current</span>
@@ -293,7 +293,7 @@
 					</div>
 					<div class="resume-wrap d-flex ftco-animate">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<i class="fas fa-code"></i>
+							<i class="fas fa-code" style="color:white"></i>
 						</div>
 						<div class="text pl-3">
 							<span class="date">Summer 2019</span>
@@ -304,7 +304,7 @@
 					</div>
 					<div class="resume-wrap d-flex ftco-animate">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<i class="fas fa-cogs"></i>
+							<i class="fas fa-cogs" style="color:white"></i>
 						</div>
 						<div class="text pl-3">
 							<span class="date">December 2017 - August 2018</span>
@@ -315,7 +315,7 @@
 					</div>
 					<div class="resume-wrap d-flex ftco-animate">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<i class="fas fa-tools"></i>
+							<i class="fas fa-tools" style="color:white"></i>
 						</div>
 						<div class="text pl-3">
 							<span class="date">Spring 2019</span>
@@ -326,7 +326,7 @@
 					</div>
 					<div class="resume-wrap d-flex ftco-animate">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<i class="fas fa-anchor"></i>
+							<i class="fas fa-anchor" style="color:white"></i>
 						</div>
 						<div class="text pl-3">
 							<span class="date">Summer 2016 - 2018</span>
@@ -374,7 +374,7 @@
 						<h2 class="heading">Extracurriculars</h2>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
-								<i class="fas fa-anchor"></i>
+								<i class="fas fa-anchor" style="color:white"></i>
 							</div>
 							<div class="text pl-3">
 								<span class="date">2019-2020</span>
@@ -385,7 +385,7 @@
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
-								<i class="fas fa-anchor"></i>
+								<i class="fas fa-anchor" style="color:white"></i>
 							</div>
 							<div class="text pl-3">
 								<span class="date">2018-2019</span>
