--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/boat.jpg);">
 					<div class="overlay"></div>
 					<div class="text text-center p-4">
-						<h3><a href="./BadgerBoatReport.pdf">BadgerBOAT</a></h3>
+						<h3><a href="boat.html">BadgerBOAT</a></h3>
 						<span>An Autonomous Boat using ROS and MOOS</span>
 					</div>
 				</div>
@@ -133,7 +133,7 @@
 				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/tee.jpeg);">
 					<div class="overlay"></div>
 					<div class="text text-center p-4">
-						<h3><a href="https://www.youtube.com/watch?v=su847c34yGw&feature=youtu.be">RoboTee</a></h3>
+						<h3><a href="robotee.html">RoboTee</a></h3>
 						<span>A dynamically adjustable robotic baseball tee</span>
 					</div>
 				</div>
@@ -143,7 +143,7 @@
 				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/robot.png);">
 					<div class="overlay"></div>
 					<div class="text text-center p-4">
-						<h3><a href="https://www.youtube.com/channel/UCIJYmga_sx5PnGkA-OP09_Q">i<sup>2</sup>robotics</a></h3>
+						<h3><a href="i2r.html">i<sup>2</sup>robotics</a></h3>
 						<span>My High School FIRST Tech Challenge team</span>
 					</div>
 				</div>
@@ -154,7 +154,7 @@
 				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/cyclone.jpg);">
 					<div class="overlay"></div>
 					<div class="text text-center p-4">
-						<h3><a href="http://projectcyclone.com/">Project Cyclone</a></h3>
+						<h3><a href="cyclone.html">Project Cyclone</a></h3>
 						<span>Using AI to do preventative machine maintenance</span>
 					</div>
 				</div>
