--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 		</div>
 		<div class="row no-gutters">
 			<div class="col-md-4">
-				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/boat.jpg);">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" onclick=" window.location = 'boat.html';" style=" cursor: pointer; background-image: url(images/boat.jpg);">
 					<div class="overlay"></div>
 					<div class="text text-center p-4">
 						<h3><a href="boat.html">BadgerBOAT</a></h3>
@@ -130,7 +130,7 @@
 				</div>
 			</div>
 			<div class="col-md-4">
-				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/tee.jpeg);">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" onclick=" window.location = 'robotee.html';" style=" cursor: pointer; background-image: url(images/tee.jpeg);">
 					<div class="overlay"></div>
 					<div class="text text-center p-4">
 						<h3><a href="robotee.html">RoboTee</a></h3>
@@ -140,7 +140,7 @@
 			</div>
 
 			<div class="col-md-4">
-				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/robot.png);">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" onclick=" window.location = 'i2r.html';" style=" cursor: pointer; background-image: url(images/robot.png);">
 					<div class="overlay"></div>
 					<div class="text text-center p-4">
 						<h3><a href="i2r.html">i<sup>2</sup>robotics</a></h3>
@@ -151,7 +151,7 @@
 		</div>
 		<div class="row no-gutters">
 			<div class="col-md-4">
-				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/cyclone.jpg);">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" onclick=" window.location = 'cyclone.html';" style=" cursor: pointer; background-image: url(images/cyclone.jpg);">
 					<div class="overlay"></div>
 					<div class="text text-center p-4">
 						<h3><a href="cyclone.html">Project Cyclone</a></h3>
@@ -207,6 +207,13 @@
 
 <section class="ftco-section ftco-no-pb goto-here" id="resume-section">
 	<div class="container">
+		<div class="col-md-12 heading-section text-center ftco-animate">
+			<h1 class="big big-2">Resume</h1>
+			<h2 class="mb-4">Resume</h2>
+		</div>
+
+		<br>
+		<br>
 		<div class="row">
 			<div class="col-md-3">
 				<nav id="navi">
@@ -215,6 +222,12 @@
 						<li><a href="#page-2">Experience</a></li>
 						<li><a href="#page-3">Skills</a></li>
 						<li><a href="#page-4">Extracurriculars</a></li>
+						<li><div class="counter-wrap ftco-animate d-flex mt-md-3">
+							<div class="text">
+								<p><a href="/CV.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
+							</div>
+						</div>
+						</li>
 					</ul>
 				</nav>
 			</div>
