--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 				<div class="project img ftco-animate d-flex justify-content-center align-items-center" onclick=" window.location = 'sawyer_connect4.html';" style=" cursor: pointer; background-image: url(images/sawyer.jpg);">
 					<div class="overlay"></div>
 					<div class="text text-center p-4">
-						<h3><a href="cyclone.html">Sawyer Connect 4</a></h3>
+						<h3><a href="sawyer_connect4.html">Sawyer Connect 4</a></h3>
 						<span>Using Rethink Robotics' Sawyer to play Connect 4</span>
 					</div>
 				</div>
