--- a/sawyer_connect4.html
+++ b/sawyer_connect4.html
@@ -69,7 +69,7 @@
                 to do some task. Our group chose connect four. The program uses two cameras, one grayscale on sawyers wrist, and one in color on its head. The head camera is used to assess
                 the condition of the game board, and the one on the wrist is used to accurately pick up and place checkers using apriltag position markers. The checker pickup location and
                 each slot on the connect 4 board is labelled with an apriltag.</p>
-                <img src="images/boat.jpg" alt="" class="img-fluid">
+                <iframe src="https://drive.google.com/file/d/1GtUF3O2Hy_-Y72iuOX-wisW5VkVVhp8K/preview" width="640" height="480"></iframe>
                 <p></p>
                 <p>For this project I worked on the pick-up and place functionality of the robot. I integrated the apriltag functionality with moveit (a ROS package) to control the movement of the robot arm.
                 The user can pass a number into the function I wrote and the robot will pick up a checker and place it in the corresponding slot. </p>
@@ -89,17 +89,17 @@
                     </ul>
                 </div>
 
-                <div class="sidebar-box ftco-animate">
-                    <h3 class="heading-sidebar">Learn More</h3>
-                    <div class="block-21 mb-4 d-flex">
-                        <a class="blog-img mr-4" style="background-image: url(images/sawyer.jpg);"></a>
-                        <div class="text">
-                            <h3 class="heading"><a href="https://drive.google.com/file/d/1GtUF3O2Hy_-Y72iuOX-wisW5VkVVhp8K/view?usp=sharing">Video of Sawyer</a></h3>
-                            <div class="meta">
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<!--                <div class="sidebar-box ftco-animate">-->
+<!--                    <h3 class="heading-sidebar">Learn More</h3>-->
+<!--                    <div class="block-21 mb-4 d-flex">-->
+<!--                        <a class="blog-img mr-4" style="background-image: url(images/sawyer.jpg);"></a>-->
+<!--                        <div class="text">-->
+<!--                            <h3 class="heading"><a href="https://drive.google.com/file/d/1GtUF3O2Hy_-Y72iuOX-wisW5VkVVhp8K/view?usp=sharing">Video of Sawyer</a></h3>-->
+<!--                            <div class="meta">-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
         </div>
     </div>
