--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						<!--	                <span class="number" data-number="120">0</span>-->
 						<!--	                <span>Project complete</span>-->
 						<!--                </p>-->
-						<p><a href="/Peter Sauer 2020.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
+						<p><a href="/Peter Sauer 2020 NoObj.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
 					</div>
 				</div>
 			</div>
@@ -233,7 +233,7 @@
 						<li><a href="#page-4">Extracurriculars</a></li>
 						<li><div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
-								<p><a href="/Peter Sauer 2020.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
+								<p><a href="/Peter Sauer 2020 NoObj.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
 							</div>
 						</div>
 						</li>
