--- a/index.html
+++ b/index.html
@@ -168,6 +168,15 @@
 					</div>
 				</div>
 			</div>
+			<div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" onclick=" window.location = 'controller.html';" style=" cursor: pointer; background-image: url(images/FullAssembly.jpg);">
+					<div class="overlay"></div>
+					<div class="text text-center p-4">
+						<h3><a href="controller.html">ROS Controller</a></h3>
+						<span>A controller with an e-ink display for debugging ROS applications</span>
+					</div>
+				</div>
+			</div>
 			<!--				<div class="col-md-4">-->
 			<!--					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/tee.jpeg);">-->
 			<!--						<div class="overlay"></div>-->
