Added controller page

--- a/controller.html
+++ b/controller.html
@@ -94,7 +94,7 @@
             <div class="sidebar-box ftco-animate">
               <h3 class="heading-sidebar">Learn More</h3>
               <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/boat_cad.png);"></a>
+                <a class="blog-img mr-4" style="background-image: url(images/FrontSide.jpg);"></a>
                 <div class="text">
                   <h3 class="heading"><a href="https://github.com/petercsauer/ros_controller">ROS Controller Github</a></h3>
                   <div class="meta">
