Added controller page

--- a/controller.html
+++ b/controller.html
@@ -74,6 +74,7 @@
             <p>The user can run ROS Services easily using the ROS Service menu on the left of the screen of the controller. Clicking on the play button near
             each service will run that service with an autocompleted (\t) service parameter, and clicking on the name of the service allows the user to run the service
             with a parameter they input.</p>
+            <img src="images/interface.png" alt="" class="img-fluid">
             <p>The device runs Raspberry OS, and the left joystick can be configured to act as a mouse controller, so that the developer can use the full OS. A mouse
             and keyboard can also be connected using a wireless adapter. The whole operating system runs off of the raspberry pi 4. </p>
             <p>The controller was designed to be easily modifyable -- each layer is laser cut and they can be swapped with new layers to add new components in the future.</p>
