--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						<!--	                <span class="number" data-number="120">0</span>-->
 						<!--	                <span>Project complete</span>-->
 						<!--                </p>-->
-						<p><a href="/Peter Sauer 2020 NoObj.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
+						<p><a href="/PeterSauer2021.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
 					</div>
 				</div>
 			</div>
@@ -177,6 +177,15 @@
 					</div>
 				</div>
 			</div>
+			<div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" onclick=" window.location = 'controller.html';" style=" cursor: pointer; background-image: url(images/UVCMail2.jpg);">
+					<div class="overlay"></div>
+					<div class="text text-center p-4">
+						<h3><a href="controller.html">UV-C Mail Cleaner</a></h3>
+						<span>A device to clean potentially infected mail using UV-C light.</span>
+					</div>
+				</div>
+			</div>
 			<!--				<div class="col-md-4">-->
 			<!--					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/tee.jpeg);">-->
 			<!--						<div class="overlay"></div>-->
@@ -242,7 +251,7 @@
 						<li><a href="#page-4">Extracurriculars</a></li>
 						<li><div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
-								<p><a href="/Peter Sauer 2020 NoObj.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
+								<p><a href="/PeterSauer2021.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
 							</div>
 						</div>
 						</li>
