--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	</div>
 	</div>
 	<div class="mouse">
-		<a href="#" class="mouse-icon">
+		<a href="#about-section" class="mouse-icon">
 			<div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
 		</a>
 	</div>
@@ -178,10 +178,10 @@
 				</div>
 			</div>
 			<div class="col-md-4">
-				<div class="project img ftco-animate d-flex justify-content-center align-items-center" onclick=" window.location = 'controller.html';" style=" cursor: pointer; background-image: url(images/UVCMail2.jpg);">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" onclick=" window.location = 'uvcmail.html';" style=" cursor: pointer; background-image: url(images/UVCMail2.jpg);">
 					<div class="overlay"></div>
 					<div class="text text-center p-4">
-						<h3><a href="controller.html">UV-C Mail Cleaner</a></h3>
+						<h3><a href="uvcmail.html">UV-C Mail Cleaner</a></h3>
 						<span>A device to clean potentially infected mail using UV-C light.</span>
 					</div>
 				</div>
@@ -251,7 +251,7 @@
 						<li><a href="#page-4">Extracurriculars</a></li>
 						<li><div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
-								<p><a href="/PeterSauer2021.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
+								<a href="/PeterSauer2021.pdf" class="btn btn-primary py-3 px-3">Download CV</a>
 							</div>
 						</div>
 						</li>
@@ -325,7 +325,7 @@
 							<i class="fas fa-cogs" style="color:white"></i>
 						</div>
 						<div class="text pl-3">
-							<span class="date">May 2020 - Current</span>
+							<span class="date">May 2020 - August 2020</span>
 							<h2>Mechanical Engineer</h2>
 							<span class="position">Presco Inc. (Woodbridge, CT)</span>
 							<p>Designed hardware, software and firmware for a device that uses UV-C lights to clean mail. Mail could be fed into the device and processed using stepper motors and rollers as it travels under disinfecting UV-C bulbs. </p>
@@ -385,7 +385,8 @@
 									<div class="h6 text-center font-weight-bold mb-0" style="padding-bottom: 5px;">Java</div>
 									<div class="h6 text-center font-weight-bold mb-0"style="padding-bottom: 5px;">Ruby</div>
 									<div class="h6 text-center font-weight-bold mb-0"style="padding-bottom: 5px;">Python</div>
-									<div class="h6 text-center font-weight-bold mb-0"style="padding-bottom: 5px;">Objective C (With iOS Experience)</div>
+									<div class="h6 text-center font-weight-bold mb-0"style="padding-bottom: 5px;">C (Microcontrollers)</div>
+									<div class="h6 text-center font-weight-bold mb-0"style="padding-bottom: 5px;">C++ (ROS)</div>
 									<div class="h6 text-center font-weight-bold mb-0"style="padding-bottom: 5px;">Javascript, HTML, CSS</div>
 								</div>
 							</div>
@@ -397,6 +398,7 @@
 									<div class="h6 text-center font-weight-bold mb-0"style="padding-bottom: 5px;">Laser Cutting</div>
 									<div class="h6 text-center font-weight-bold mb-0"style="padding-bottom: 5px;">ROS & MOOS</div>
 									<div class="h6 text-center font-weight-bold mb-0"style="padding-bottom: 5px;">3D Printing</div>
+									<div class="h6 text-center font-weight-bold mb-0"style="padding-bottom: 5px;">Mill & Lathe Work</div>
 								</div>
 							</div>
 							<div class="col-lg-4 mb-4">
