--- a/index.html
+++ b/index.html
@@ -582,7 +582,8 @@
 					</div>
 					<div>
 						<h3 class="mb-4">Address</h3>
-						<p>111 S Randall Ave, Madison WI 53715</p>
+						<p>811 Emerson St Apt 317</p>
+						<p>Evanston, IL 60201</p>
 					</div>
 				</div>
 			</div>
