--- a/index.html
+++ b/index.html
@@ -186,6 +186,15 @@
 					</div>
 				</div>
 			</div>
+			<div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" onclick=" window.location = 'wrench.html';" style=" cursor: pointer; background-image: url(images/MainAssemRender.png);">
+					<div class="overlay"></div>
+					<div class="text text-center p-4">
+						<h3><a href="wrench.html">Bionic Wrench Manufacturing Automation</a></h3>
+						<span>Creating an automated process for manufacturing the Loggerhead Tools Bionic Wrench.</span>
+					</div>
+				</div>
+			</div>
 			<!--				<div class="col-md-4">-->
 			<!--					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/tee.jpeg);">-->
 			<!--						<div class="overlay"></div>-->
