added missing photo

--- a/wrench.html
+++ b/wrench.html
@@ -163,7 +163,7 @@
             <p>A servo was added to the electronics part of this project. The servo had three wires, red, black and white which were connected to 5V, GND and pin 6 on the PIC32, respectively. A PWM signal was outputted to pin 6 which allows for control over the servo position. </p>
             <h5 id="overall-layout">Overall Layout</h5>
             <p>Here is a picture of the final layout of the system on it&#39;s breadboards. The smaller breadboard is running off of 12V (from an external supply) and the larger one runs off of USB which is converted to 3.3V by the Pololu voltage regulator you can see in the top center.
-            <img src="images/Electronics.jpg" width=100%>
+            <img src="images//Electronics.jpg" width=100%>
             
                         
             <h3 id="code">Code</h3>
