added explanation for wrench failure

--- a/wrench.html
+++ b/wrench.html
@@ -68,7 +68,7 @@
 
             <p>This was my final project in the MSR (Masters of Science in Robotics) program at Northwestern University. The project was to automate the production of the LoggerHead Tools Bionic Wrench.</p>
             <iframe width=100% height="425" src="https://www.youtube.com/embed/_B8rRwbNTxc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+            <p>The video shows a few jaws falling out of the wrench as the platform is lowered. This is unfortunately because the electromagnet I had broke a few days earlier and the part was on backorder. Usually the electromagnet holds the jaws in place during this part of the process. I created a new design that uses neodymium magnets instead of an electromagnet that you can see below, but didn't have time to test it.</p>
             
             <h3 id="overview">Overview</h3>
             <p>The goal for this project was to continue to evolve the design created by Levi Todes (MSR &#39;18) and add usability features like a magazine to store wrench jaws, a bowl descrambler to orient wrench jaws, and a movable platform for easy wrench placement. </p>
