fixed description in footer

--- a/cyclone.html
+++ b/cyclone.html
@@ -107,8 +107,8 @@
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
               <p>
-                I have been a passionate engineer and computer scientist since my early high school years. I aim to continue to develop my engineering skills as a Masters student.</p>
-              <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
+                I have been a passionate engineer and computer scientist since my early high school years. I plan to continue developing my skills through a Mechatronics Engineer position at Marine Advanced Robotics in Richmond, CA.</p>
+                <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="https://github.com/petercsauer"><span class="icon-github"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.facebook.com/petercsauer"><span class="icon-facebook"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.linkedin.com/in/petercsauer/"><span class="icon-linkedin"></span></a></li>
