added education and work experiences

--- a/index.html
+++ b/index.html
@@ -275,10 +275,10 @@
 							<i class="fas fa-graduation-cap" style="color:white"></i>
 						</div>
 						<div class="text pl-3">
-							<span class="date">2020-Current</span>
+							<span class="date">2020-2021</span>
 							<h2>Master of Science in Robotics</h2>
 							<span class="position">Northwestern University</span>
-							<p>Currently working on a masters degree in robotics at Northwestern University</p>
+							<p>Completed a MS in Robotics at Northwestern University in 2021 Final GPA of 3.8.</p>
 						</div>
 					</div>
 					<div class="resume-wrap d-flex ftco-animate">
@@ -318,6 +318,17 @@
 
 				<div id="page-2" class= "page two">
 					<h2 class="heading">Work Experience</h2>
+					<div class="resume-wrap d-flex ftco-animate">
+						<div class="icon d-flex align-items-center justify-content-center">
+							<i class="fas fa-code" style="color:white"></i>
+						</div>
+						<div class="text pl-3">
+							<span class="date">September 2021 - Current</span>
+							<h2>UI/UX Designer</h2>
+							<span class="position">Marine Advanced Robotics (Richmond, CA)</span>
+							<p>Worked as a Mechatronics Engineer for MAR designing autonomous motor boats for government applications and scientific research.</p>
+						</div>
+					</div>
 					<div class="resume-wrap d-flex ftco-animate">
 						<div class="icon d-flex align-items-center justify-content-center">
 							<i class="fas fa-code" style="color:white"></i>
