--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 					<h2 class="heading">Work Experience</h2>
 					<div class="resume-wrap d-flex ftco-animate">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<i class="fas fa-code" style="color:white"></i>
+							<i class="fas fa-tools" style="color:white"></i>
 						</div>
 						<div class="text pl-3">
 							<span class="date">September 2021 - Current</span>
