--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
 					<div class="col-md-12 heading-section ftco-animate">
 						<h1 class="big">About</h1>
 						<h2 class="mb-4">About Me</h2>
-						<p>I have been a passionate engineer and computer scientist since my early high school years. I aim to continue to develop my engineering skills as a Masters student.</p>
+						<p>I have been a passionate engineer and computer scientist since my early high school years. I've continued my career in robotics through a Masters program at Northwestern University and a job designing autonomous boats at Ocean Power Technologies.</p>
 						<ul class="about-info mt-4 px-md-0 px-2">
 							<li class="d-flex"><span>Name:</span> <span>Peter Sauer</span></li>
 							<li class="d-flex"><span>Date of birth:</span> <span>July 6, 1998</span></li>
-							<li class="d-flex"><span>Home Town:</span> <span>Westport, CT</span></li>
-							<li class="d-flex"><span>Zip code:</span> <span>06880</span></li>
+							<li class="d-flex"><span>Home:</span> <span>Berkeley CA</span></li>
+							<li class="d-flex"><span>Zip code:</span> <span>94707</span></li>
 							<li class="d-flex"><span>Email:</span> <span>petercsauer@me.com</span></li>
 							<li class="d-flex"><span>Phone: </span> <span>(203) 644-6182</span></li>
 						</ul>
@@ -104,7 +104,7 @@
 						<!--	                <span class="number" data-number="120">0</span>-->
 						<!--	                <span>Project complete</span>-->
 						<!--                </p>-->
-						<p><a href="/PeterSauer2021.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
+						<p><a href="PeterSauer2023.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
 					</div>
 				</div>
 			</div>
@@ -121,14 +121,15 @@
 		</div>
 		<div class="row no-gutters">
 			<div class="col-md-4">
-				<div class="project img ftco-animate d-flex justify-content-center align-items-center" onclick=" window.location = 'boat.html';" style=" cursor: pointer; background-image: url(images/boat.jpg);">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" onclick=" window.location = 'wamv.html';" style=" cursor: pointer; background-image: url(images/wamv.jpg);">
 					<div class="overlay"></div>
 					<div class="text text-center p-4">
-						<h3><a href="boat.html">BadgerBOAT</a></h3>
-						<span>An Autonomous Boat using ROS and MOOS</span>
+						<h3><a href="wamv.html">WAM-V</a></h3>
+						<span>An Autonomous Boat for survey work and surveillance</span>
 					</div>
 				</div>
 			</div>
+			
 			<div class="col-md-4">
 				<div class="project img ftco-animate d-flex justify-content-center align-items-center" onclick=" window.location = 'robotee.html';" style=" cursor: pointer; background-image: url(images/tee.jpeg);">
 					<div class="overlay"></div>
@@ -156,6 +157,15 @@
 					<div class="text text-center p-4">
 						<h3><a href="cyclone.html">Project Cyclone</a></h3>
 						<span>Using AI to do preventative machine maintenance</span>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" onclick=" window.location = 'boat.html';" style=" cursor: pointer; background-image: url(images/boat.jpg);">
+					<div class="overlay"></div>
+					<div class="text text-center p-4">
+						<h3><a href="boat.html">BadgerBOAT</a></h3>
+						<span>An Autonomous Boat using ROS and MOOS</span>
 					</div>
 				</div>
 			</div>
@@ -260,7 +270,7 @@
 						<li><a href="#page-4">Extracurriculars</a></li>
 						<li><div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
-								<a href="/PeterSauer2021.pdf" class="btn btn-primary py-3 px-3">Download CV</a>
+								<a href="PeterSauer2023.pdf" class="btn btn-primary py-3 px-3">Download CV</a>
 							</div>
 						</div>
 						</li>
@@ -325,8 +335,8 @@
 						<div class="text pl-3">
 							<span class="date">September 2021 - Current</span>
 							<h2>UI/UX Designer</h2>
-							<span class="position">Marine Advanced Robotics (Richmond, CA)</span>
-							<p>Worked as a Mechatronics Engineer for MAR designing autonomous motor boats for government applications and scientific research.</p>
+							<span class="position">WAM-V (Ocean Power Technologies) (Richmond, CA)</span>
+							<p>Worked as a Mechatronics Engineer for OPT designing autonomous motor boats for government applications and scientific research.</p>
 						</div>
 					</div>
 					<div class="resume-wrap d-flex ftco-animate">
@@ -406,8 +416,9 @@
 									<div class="h6 text-center font-weight-bold mb-0"style="padding-bottom: 5px;">Ruby</div>
 									<div class="h6 text-center font-weight-bold mb-0"style="padding-bottom: 5px;">Python</div>
 									<div class="h6 text-center font-weight-bold mb-0"style="padding-bottom: 5px;">C (Microcontrollers)</div>
-									<div class="h6 text-center font-weight-bold mb-0"style="padding-bottom: 5px;">C++ (ROS)</div>
+									<div class="h6 text-center font-weight-bold mb-0"style="padding-bottom: 5px;">C++ (including ROS)</div>
 									<div class="h6 text-center font-weight-bold mb-0"style="padding-bottom: 5px;">Javascript, HTML, CSS</div>
+									<div class="h6 text-center font-weight-bold mb-0"style="padding-bottom: 5px;">Networking</div>
 								</div>
 							</div>
 							<div class="col-lg-4 mb-4">
@@ -602,8 +613,8 @@
 					</div>
 					<div>
 						<h3 class="mb-4">Address</h3>
-						<p>811 Emerson St Apt 317</p>
-						<p>Evanston, IL 60201</p>
+						<p>491 Vincente Ave</p>
+						<p>Berkeley, CA 94707</p>
 					</div>
 				</div>
 			</div>
@@ -654,8 +665,8 @@
 				<div class="ftco-footer-widget mb-4">
 					<h2 class="ftco-heading-2">About</h2>
 					<p>
-						I have been a passionate engineer and computer scientist since my early high school years. I plan to continue developing my skills through a Mechatronics Engineer position at Marine Advanced Robotics in Richmond, CA.</p>
-					<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
+						I have been a passionate engineer and computer scientist since my early high school years. I plan to continue developing my skills through a Mechatronics Engineer position at Ocean Power Technologies in Richmond, CA.</p>
+						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 						<li class="ftco-animate"><a href="https://github.com/petercsauer"><span class="icon-github"></span></a></li>
 						<li class="ftco-animate"><a href="https://www.facebook.com/petercsauer"><span class="icon-facebook"></span></a></li>
 						<li class="ftco-animate"><a href="https://www.linkedin.com/in/petercsauer/"><span class="icon-linkedin"></span></a></li>
