--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 						</div>
 						<div class="text pl-3">
 							<span class="date">September 2021 - Current</span>
-							<h2>UI/UX Designer</h2>
+							<h2>Mechatronics Engineer</h2>
 							<span class="position">WAM-V (Ocean Power Technologies) (Richmond, CA)</span>
 							<p>Worked as a Mechatronics Engineer for OPT designing autonomous motor boats for government applications and scientific research.</p>
 						</div>
